--- a/S4-Capstone-Assignment/_SharingApp-c1-items-only-v4/SharingApp/app/src/main/AndroidManifest.xml
+++ b/S4-Capstone-Assignment/_SharingApp-c1-items-only-v4/SharingApp/app/src/main/AndroidManifest.xml
@@ -4,14 +4,17 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".ContactsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
