--- a/S4-Capstone-Assignment/_SharingApp-c1-items-only-v4/SharingApp/app/src/main/AndroidManifest.xml
+++ b/S4-Capstone-Assignment/_SharingApp-c1-items-only-v4/SharingApp/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".AddContactActivity"
+            android:exported="false" />
+        <activity
             android:name=".ContactsActivity"
             android:exported="false" />
         <activity
